@@ -1,2 +1,1 @@
-DIST django-mysqlsearch-0.1.tar.gz 3678 SHA256 67246ec95820400a3f4a26ada1bf9b244b76ae632dd9a01ad26fcfd910554e43
 DIST django-mysqlsearch-0.2.tar.gz 3697 SHA256 ac4015a567fc64f0222f4f41a9d67380bebdc77eaa7849fabef0f8e18ce977e4
